[project]
name = "dropsite"
version = "0.1.0"
description = ""
authors = [
    {name = "Leif Ryge", email = "leif@synthesize.us"},
]
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "none"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


